Re-add next|prev buffer keymap and fix waybar visible workspaces

--- a/_config/waybar/style.css
+++ b/_config/waybar/style.css
@@ -38,22 +38,28 @@ window#waybar.hidden {
     box-shadow: inset 0 -3px #ebdbb2;
 }
 
-#workspaces button.focused {
-    background-color: #689d6a;
-    box-shadow: inset 0 -3px #ebdbb2;
-}
-
 #workspaces button.urgent {
     background-color: #cc241d;
 }
 
-/*
-#workspaces button.visible {
 #workspaces button.persistent {
-#workspaces button.current_output {
-    background-color: #cc241d;
+    /* ??? */
 }
-*/
+
+#workspaces button.current_output {
+    /* workspaces assigned to the active output but not visible */
+}
+
+#workspaces button.visible {
+    color: #282828;
+    background-color: #d8a657;
+}
+
+#workspaces button.focused {
+    color: #ebdbb2;
+    background-color: #689d6a;
+    box-shadow: inset 0 -3px #ebdbb2;
+}
 
 #mode {
     background-color: #d79921;
